[package]
name = "sarc"
version = "1.1.2"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jam1garner/sarc"
documentation = "https://docs.rs/sarc"
description = "A library for working with Nintendo SARC files for Wii U, 3ds and Switch"

[features]
default = ["yaz0_sarc", "zstd_sarc"]
yaz0_sarc = ["yaz0"]
zstd_sarc = ["zstd"]

#sarctool = ["structopt"]

#[[bin]]
#name = "sarc"
#path = "src/main.rs"
#required-features = ["sarctool"]

[dependencies]
nom = "5"
binwrite = "0.2.1"
yaz0 = { version = "0.1.2" , optional = true }
zstd = { version = "0.5.1", optional = true }

#structopt = { version = "", optional = true }
